--- a/src/components/seo/HeadCommon.astro
+++ b/src/components/seo/HeadCommon.astro
@@ -30,7 +30,7 @@ const canonical = url.href
 <meta http-equiv="X-UA-Compatible" content="IE=7" />
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta name="theme-color" content="#d8b4fe" />
+<meta name="theme-color" content="#a855f7" />
 
 <!--Font preloads-->
 <link
