--- a/src/components/seo/HeadPost.astro
+++ b/src/components/seo/HeadPost.astro
@@ -17,7 +17,7 @@ const bannerWidth = 800
 const bannerHeight = 420
 ---
 
-<meta slot="meta" name="robots" content="index, follow" />
+<meta slot="meta" name="robots" content="all" />
 
 <meta property="article:publisher" content={Astro.site} />
 <meta property="article:author" content={Astro.site} />
