--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -106,7 +106,7 @@ import songs from "../data/songs.json"
       <section>
         <h2>Programación</h2>
         <p>
-          Empezé a programar a los 14 año, pero no fue hastas los 17 que me lo
+          Empezé a programar a los 14 años, pero no fue hastas los 17 que me lo
           tomé en serio. He programado en C, Python, Lua, PHP, C# y Rust; pero
           los lenguajes que más uso actualmente son <strong>JavaScript</strong>
            y <strong>TypeScript</strong>. Trabajo en su mayoria con <strong
