--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -2,7 +2,7 @@
 import BaseLayout from "../layouts/BaseLayout.astro"
 ---
 
-<BaseLayout title="404" description="">
+<BaseLayout title="404" description="Página no encontrada">
   <meta slot="meta" name="robots" content="none" />
   <div class="max-w-screen-sm mx-auto">
     <section class="min-h-screen grid content-center relative">
@@ -12,7 +12,7 @@ import BaseLayout from "../layouts/BaseLayout.astro"
         >
           <span class="text-textColor-accent">404</span>
           <span class="mx-3">|</span>
-           Page Not Found
+           Página no encontrada
         </h1>
       </div>
     </section>
