--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,9 +1,9 @@
 ---
 import FormattedDate from "../../components/FormattedDate.astro"
-import ChevronLeft from "../../icons/ChevronLeft.astro"
 import type { GetStaticPaths } from "astro"
 import { getCollection, type CollectionEntry } from "astro:content"
 import PostLayout from "../../layouts/PostLayout.astro"
+import RightArrowIcon from "../../icons/RightArrowIcon.astro"
 
 export const getStaticPaths = (async () => {
   const blog = await getCollection("blog")
@@ -25,53 +25,69 @@ const readingTime = time && `${time - 1}-${time + 1}`
 ---
 
 <PostLayout post={post}>
-  <div class="max-w-screen-lg mx-auto">
-    <p
-      class="text-left mb-4 hidden md:block text-textColor-accent font-bold text-lg"
-    >
-      <a href="/blog" class="group">
-        <i>
-          <ChevronLeft
-            class="inline-block group-hover:translate-x-[-0.25rem] transition-transform"
+  <div class="max-w-screen-sm mx-auto pt-6">
+    <section class="max-w-screen-md mx-auto">
+      <div class="mb-6 hidden md:block text-textColor-accent font-bold text-lg">
+        <a href="/blog" class="group">
+          <RightArrowIcon
+            class="inline-block group-hover:translate-x-[-0.25rem] transition-transform rotate-180"
           />
-        </i>
-         Blog
-      </a>
-    </p>
-    <section class="md:text-center max-w-screen-md mx-auto md:px-4">
-      <p class="mb-2">
-        <FormattedDate date={post.data.pubDate} />
-      </p>
+           Blog
+        </a>
+      </div>
       <h1
-        class="text-4xl md:text-5xl font-bold text-textColor-primary mb-2 md:mb-4"
+        class="text-4xl md:text-5xl font-semibold md:font-normal text-textColor-primary mb-2 md:mb-4"
       >
         {post.data.title}
       </h1>
-      <p class="text-lg md:text-xl"><em>{post.data.description}</em></p>
-    </section>
-    <div class="mt-14 mb-14">
-      <p class="mb-4">
-        ⏱️ {readingTime} minutos
+      <p class="text-lg md:text-xl text-textColor-secondary">
+        <em>{post.data.description}</em>
       </p>
-      <div class="bg-borderColor-gray h-[2px]"></div>
-    </div>
+      <div class="bg-borderColor-light h-[1px] mt-8 mb-6"></div>
+      {
+        post.data.mainImg && (
+          <img
+            src={post.data.mainImg}
+            alt={post.data.description}
+            width="800"
+            height="400"
+            class="mx-auto max-w-screen-md w-full object-cover"
+          />
+        )
+      }
+      <div class="flex mb-3">
+        <p>
+          <FormattedDate date={post.data.pubDate} />
+        </p>
+        <p class="mx-4">|</p>
+        <p>
+          ⏱️ {readingTime} minutos
+        </p>
+      </div>
+      <ul class="flex gap-x-2">
+        {
+          post.data.tags.map((tag) => (
+            <li>
+              <span class="text-sm px-2 py-1 rounded-lg bg-hrColor">{tag}</span>
+            </li>
+          ))
+        }
+      </ul>
+    </section>
     <article
-      class="prose prose-lorem prose-invert sm:prose-lg md:prose-xl prose-code:before:content-[''] prose-code:after:content-[''] prose-h1:text-center md:prose-h2:pt-8 md:prose-h2:mb-6 md:prose-h2:text-center prose-h3:text-xl md:prose-h3:text-2xl prose-h3:italic prose-h3:mt-12 max-w-screen-md mx-auto"
+      class="prose prose-lorem prose-invert prose-lg sm:prose-xl prose-code:before:content-[''] prose-code:after:content-[''] prose-h1:text-center md:prose-h2:mb-6 md:prose-h2:text-center prose-h3:text-lg md:prose-h3:text-xl prose-h3:italic prose-h3:mt-12 max-w-none pt-4"
       id="content"
     >
       <Content />
     </article>
   </div>
-  <div class="mt-[48vh] text-center">
-    <p class="text-textColor-teriary">
-      <em>[Espacio en blanco para mejor lectura]</em>
-    </p>
-  </div>
+
+  <div class="mt-[30vh] md:mt-[50vh] text-center"></div>
 </PostLayout>
-<!-- 
+
 <script>
   import createLinksInHeaders from "../../scripts/blogHeaders.ts"
   window.addEventListener("load", () => {
     createLinksInHeaders("main")
   })
-</script> -->
+</script>
