google analytics y tema oscuro

--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -1,11 +1,11 @@
 ---
 import HeaderLink from "../HeaderLink.astro"
 import { URLS_MAP } from "../../consts.ts"
-import GithubIcon from "../../icons/GithubIcon.astro"
+import GithubIcon from "../../components/ui/icons/GithubIcon.astro"
 ---
 
 <footer
-  class="border-t border-borderColor-gray mb-12 mt-36"
+  class="border-t border-borderColor-gray mb-2 md:mb-12 mt-36"
 >
   <div class="p-6 mt-4 md:px-0 max-w-screen-lorem mx-auto flex justify-between items-center">
     <div class="w-28">
