--- a/src/components/Blog/BlogPost.astro
+++ b/src/components/Blog/BlogPost.astro
@@ -1,5 +1,5 @@
 ---
-import RightArrowIcon from "../../icons/RightArrowIcon.astro"
+import RightArrowIcon from "../../components/ui/icons/RightArrowIcon.astro"
 import FormattedDate from "../../components/FormattedDate.astro"
 import type { HTMLAttributes } from "astro/types"
 
