--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,7 +1,7 @@
 ---
 import BaseLayout from "../../layouts/BaseLayout.astro"
 import BlogPost from "../../components/Blog/BlogPost.astro"
-import RssIcon from "../../icons/RssIcon.astro"
+import RssIcon from "../../components/ui/icons/RssIcon.astro"
 import { getCollection } from "astro:content"
 import { SITE } from "../../consts"
 
