--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ import PostsByYear from "../components/Index/PostsByYear.astro"
           <em
             >por <a
               href="/about"
-              class="x-underline filledEffect hover:text-background transition-all"
+              class="filledEffect hover:text-background transition-all"
               >Michelangelo</a
             ></em
           >
@@ -42,6 +42,24 @@ import PostsByYear from "../components/Index/PostsByYear.astro"
   </div>
 </BaseLayout>
 
+<script>
+  import { getAnalytics } from "firebase/analytics"
+  import { initializeApp } from "firebase/app"
+
+  const firebaseConfig = {
+    apiKey: "AIzaSyCOTvBJIn-tu61sKs6KP9v1nFqUkGYpQl4",
+    authDomain: "neo-lorem.firebaseapp.com",
+    projectId: "neo-lorem",
+    storageBucket: "neo-lorem.appspot.com",
+    messagingSenderId: "906925394003",
+    appId: "1:906925394003:web:7de880e224529bba3a1ea6",
+    measurementId: "G-HQDS5TXYLF",
+  }
+
+  const app = initializeApp(firebaseConfig)
+  const analytics = getAnalytics(app)
+</script>
+
 <style>
   .gradient {
     background-image: linear-gradient(
@@ -56,6 +74,16 @@ import PostsByYear from "../components/Index/PostsByYear.astro"
       hsl(341deg 91% 68%) 87%,
       hsl(0deg 91% 71%) 100%
     );
+  }
+
+  .filledEffect {
+    background: linear-gradient(#000 0 0) bottom no-repeat;
+    background-size: 100% 0.1rem;
+  }
+
+  :global(.dark) .filledEffect {
+    background: linear-gradient(#fff 0 0) bottom no-repeat;
+    background-size: 100% 0.1rem;
   }
 
   .filledEffect:hover {
