--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -3,6 +3,7 @@ import HeaderNav from "./HeaderNav.astro"
 import HeaderLink from "../HeaderLink.astro"
 import { URLS_MAP } from "../../consts"
 import ToggleTheme from "./ToggleTheme.astro"
+import FavIcon from "../ui/icons/FavIcon.astro"
 ---
 
 <div class="mb-[108px]">
@@ -12,15 +13,8 @@ import ToggleTheme from "./ToggleTheme.astro"
     <div
       class="max-w-screen-2xl mx-auto flex justify-between py-2 px-6 md:px-8"
     >
-      <a href="/" class="active:scale-90 transition-transform">
-        <img
-          class="pointer-events-none w-8 md:w-10"
-          loading="lazy"
-          src="/favicon.svg"
-          alt="Logo del blog"
-          height={44}
-          width={44}
-        />
+      <a href="/" class="active:scale-90 transition-transform w-10 h-10 flex items-center justify-center">
+        <FavIcon class="pointer-events-none" />
       </a>
       <menu class="flex gap-x-4 items-center text-textColor-secondary">
         <li>
