Nueva seta: Poder cambiar de fuente

--- a/src/components/GlobalStyles.astro
+++ b/src/components/GlobalStyles.astro
@@ -74,6 +74,30 @@
   }
 
   @font-face {
+    font-family: "Karla";
+    src: url("/fonts/karla-variable.woff2"), format("woff2");
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: "Karla";
+    src: url("/fonts/karla-regular.woff2"), format("woff2");
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: "Karla";
+    src: url("/fonts/karla-italic-variable.woff2"), format("woff2");
+    font-weight: normal;
+    font-style: italic;
+    font-display: swap;
+  }
+
+  @font-face {
     font-family: "Pico8";
     src: url("/fonts/pico-8-wide.ttf"), format("ttf");
     font-weight: normal;
