--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -3,7 +3,9 @@ import HeaderNav from "./HeaderNav.astro"
 import HeaderLink from "../HeaderLink.astro"
 import { URLS_MAP } from "../../consts"
 import ToggleTheme from "./ToggleTheme.astro"
+import FontToggle from "./FontToggle.astro"
 import FavIcon from "../ui/icons/FavIcon.astro"
+import CommandIcon from "../ui/icons/CommandIcon.astro"
 ---
 
 <div class="mb-[108px]">
@@ -13,21 +15,25 @@ import FavIcon from "../ui/icons/FavIcon.astro"
     <div
       class="max-w-screen-2xl mx-auto flex justify-between py-2 px-6 md:px-8"
     >
-      <a href="/" class="active:scale-90 transition-transform w-10 h-10 flex items-center justify-center">
+      <a
+        href="/"
+        class="active:scale-90 transition-transform w-10 h-10 flex items-center justify-center"
+      >
         <FavIcon class="pointer-events-none" />
       </a>
       <menu class="flex gap-x-4 items-center text-textColor-secondary">
         <li>
-          <ToggleTheme />
-        </li>
-        <!-- <li>
-          <button
+          <!-- <button
             type="button"
-            class="w-9 h-9 md:w-10 md:h-10 flex items-center justify-center bg-button/80 hover:text-textColor-accent hover:border-[3px] border-borderColor-accent box-border rounded-lg hover:shadow-textColor-accent/40 hover:shadow-[0_2px_40px_-4px] focus:scale-90 transition-all"
+            class="w-10 h-10 flex items-center justify-center bg-button/80 hover:text-textColor-accent hover:border-[3px] border-borderColor-accent box-border rounded-lg hover:shadow-textColor-accent/80 hover:shadow-[0_2px_40px_-4px] focus:scale-90 transition-all"
           >
             <CommandIcon class="w-5 h-5" />
-          </button>
-        </li> -->
+          </button> -->
+          <FontToggle />
+        </li>
+        <li>
+          <ToggleTheme />
+        </li>
       </menu>
     </div>
   </article>
