--- a/src/components/seo/HeadCommon.astro
+++ b/src/components/seo/HeadCommon.astro
@@ -33,7 +33,7 @@ const canonical = url.href
 <meta name="theme-color" content="#a855f7" />
 
 <!--Font preloads-->
-<link
+<!-- <link
   rel="preload"
   as="font"
   href="/fonts/source-serif-pro-regular.woff2"
@@ -58,6 +58,27 @@ const canonical = url.href
   rel="preload"
   as="font"
   href="/fonts/source-serif-pro-700.woff2"
+  type="font/woff2"
+  crossorigin
+/> -->
+<link
+  rel="preload"
+  as="font"
+  href="/fonts/karla-regular.woff2"
+  type="font/woff2"
+  crossorigin
+/>
+<link
+  rel="preload"
+  as="font"
+  href="/fonts/karla-italic-variable.woff2"
+  type="font/woff2"
+  crossorigin
+/>
+<link
+  rel="preload"
+  as="font"
+  href="/fonts/karla-variable.woff2"
   type="font/woff2"
   crossorigin
 />
