--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -13,7 +13,7 @@ const { post } = Astro.props
 <BaseLayout
   title={post.data.title}
   description={post.data.description}
-  class="scroll-smooth scroll-p-24"
+  class="scroll-p-28"
   image={post.data.mainImg}
   imageAlt={post.data.description}
   imageHeight="800"
