--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -7,11 +7,11 @@ import GithubIcon from "../../components/ui/icons/GithubIcon.astro"
 <footer
   class="border-t border-borderColor-gray mb-2 md:mb-12 mt-36"
 >
-  <div class="p-6 mt-4 md:px-0 max-w-screen-lorem mx-auto flex justify-between items-center">
+  <div class="p-6 mt-4 md:px-0 max-w-screen-lorem mx-auto flex justify-between items-center text-textColor-secondary">
     <div class="w-28">
       {
         URLS_MAP.map(({ href, title }) => (
-          <div class="hover:text-textColor-primary font-semibold">
+          <div class="hover:text-textColor-primary">
             <HeaderLink
               href={href}
               title={title}
