--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -30,7 +30,7 @@ const {
 <html
   lang="es"
   class:list={[
-    "font-serif selection:bg-textColor-accent/60 selection:text-background",
+    "selection:bg-textColor-accent/60 selection:text-background",
     className,
   ]}
 >
