--- a/src/components/seo/TwitterTags.astro
+++ b/src/components/seo/TwitterTags.astro
@@ -15,8 +15,8 @@ const {
   title,
   description,
   card = "summary_large_image",
-  site = "@VTokyo9",
-  creator = "@VTokyo9",
+  site = SITE.X,
+  creator = SITE.X,
   image = SITE.IMAGE,
   imageAlt = SITE.IMAGE_ALT,
 } = Astro.props
