--- a/src/components/Header/ToggleTheme.astro
+++ b/src/components/Header/ToggleTheme.astro
@@ -3,10 +3,11 @@
 ---
 
 <button
-  class="w-10 h-10 flex items-center justify-center bg-button/80 hover:text-textColor-accent hover:border-[3px] border-borderColor-accent box-border rounded-lg hover:shadow-textColor-accent/40 hover:shadow-[0_2px_40px_-4px] focus:scale-90 transition-all"
+  class="w-10 h-10 flex items-center justify-center bg-button/80 hover:text-textColor-accent hover:border-[3px] border-borderColor-accent box-border rounded-lg hover:shadow-textColor-accent/40 hover:shadow-[0_2px_40px_-4px] active:scale-90 transition-all"
   type="button"
   id="themeToggle"
 >
+  <span class="sr-only">Cambiar modo</span>
   <svg
     xmlns="http://www.w3.org/2000/svg"
     width="24"
@@ -45,6 +46,13 @@
   </svg>
 </button>
 
+<div
+  id="popoverTheme"
+  role="tooltip"
+  class="absolute z-10 inline-block invisible text-sm py-1 px-2 text-white bg-popover rounded-md font-semibold"
+>
+</div>
+
 <style>
   .sun {
     display: block;
@@ -62,6 +70,9 @@
 </style>
 
 <script is:inline>
+  const btn = document.getElementById("themeToggle")
+  const popover = document.getElementById("popoverTheme")
+
   const theme = (() => {
     if (typeof localStorage !== "undefined" && localStorage.getItem("theme")) {
       return localStorage.getItem("theme")
@@ -74,21 +85,40 @@
 
   if (theme === "light") {
     document.documentElement.classList.remove("dark")
+    popover.textContent = "Activar modo oscuro"
   } else {
     document.documentElement.classList.add("dark")
+    popover.textContent = "Activar modo claro"
   }
 
   window.localStorage.setItem("theme", theme)
 
-  const handleToggleClick = () => {
+  const handleToggleClick = (e) => {
     const element = document.documentElement
     element.classList.toggle("dark")
 
     const isDark = element.classList.contains("dark")
+    popover.textContent = isDark ? "Activar modo claro" : "Activar modo oscuro"
     localStorage.setItem("theme", isDark ? "dark" : "light")
   }
 
-  document
-    .getElementById("themeToggle")
-    .addEventListener("click", handleToggleClick)
+  btn.addEventListener("click", handleToggleClick)
+</script>
+
+<script>
+  import { Popover, type PopoverOptions } from "flowbite"
+
+  const $targetEl = document.getElementById("popoverTheme")
+  const $triggerEl = document.getElementById("themeToggle")
+
+  const options: PopoverOptions = {
+    placement: "bottom-end",
+  }
+
+  const instanceOptions = {
+    id: "popoverContent",
+    override: true,
+  }
+
+  const popover = new Popover($targetEl, $triggerEl, options, instanceOptions)
 </script>
