--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -13,6 +13,7 @@ type Props = {
   imageAlt?: string
   imageWidth?: string
   imageHeight?: string
+  nav?: boolean
 }
 
 const {
@@ -23,6 +24,7 @@ const {
   imageAlt,
   imageHeight,
   imageWidth,
+  nav,
 } = Astro.props
 ---
 
@@ -30,11 +32,11 @@ const {
 <html
   lang="es"
   class:list={[
-    "selection:bg-textColor-accent/60 selection:text-background",
+    "selection:bg-textColor-primary selection:text-background",
     className,
   ]}
 >
-  <head class="min-h-screen">
+  <head>
     <HeadCommon
       title={title ?? SITE.TITLE}
       description={description}
@@ -47,11 +49,11 @@ const {
     <BaseStyles />
   </head>
   <body
-    class="bg-background text-textColor-secondary break-words overflow-x-hidden"
+    class="bg-background text-textColor-secondary break-words overflow-x-hidden min-h-[40svh]"
   >
-    <Header />
+    <Header nav={nav} />
     <slot name="header" />
-    <main class="px-6 mx-auto min-h-screen">
+    <main class="px-6 mx-auto">
       <slot />
     </main>
     <Footer />
