--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -20,7 +20,10 @@ const blog = (await getCollection("blog")).sort(
       <div class="relative">
         <h1 class="text-5xl md:text-6xl font-bold text-textColor-primary">
           Blog <a href="/rss.xml" target="_blank"
-            ><i><RssIcon class="inline w-8 h-8" /></i></a
+            ><i
+              ><RssIcon class="inline w-8 h-8" />
+              <span class="sr-only">RSS</span>
+            </i></a
           >
         </h1>
       </div>
@@ -41,26 +44,3 @@ const blog = (await getCollection("blog")).sort(
     </article>
   </div>
 </BaseLayout>
-
-<!-- <style>
-  .gradient {
-    background-image: linear-gradient(
-      315deg,
-      hsl(137deg 100% 75%) 0%,
-      hsl(153deg 98% 69%) 16%,
-      hsl(164deg 95% 62%) 24%,
-      hsl(172deg 93% 56%) 30%,
-      hsl(177deg 90% 53%) 35%,
-      hsl(182deg 90% 57%) 40%,
-      hsl(186deg 96% 63%) 45%,
-      hsl(191deg 100% 69%) 50%,
-      hsl(193deg 100% 66%) 55%,
-      hsl(196deg 100% 63%) 60%,
-      hsl(199deg 99% 62%) 65%,
-      hsl(202deg 97% 62%) 70%,
-      hsl(207deg 93% 63%) 76%,
-      hsl(213deg 86% 65%) 84%,
-      hsl(221deg 76% 66%) 100%
-    );
-  }
-</style> -->
