--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import BaseLayout from "../layouts/BaseLayout.astro"
 import LastPost from "../components/Index/LastPost.astro"
 import PostsByYear from "../components/Index/PostsByYear.astro"
+import { SITE } from "../consts"
 ---
 
 <BaseLayout>
@@ -25,7 +26,7 @@ import PostsByYear from "../components/Index/PostsByYear.astro"
             >por <a
               href="/about"
               class="filledEffect hover:text-background transition-all"
-              >Michelangelo</a
+              >{SITE.ME}</a
             ></em
           >
         </p>
